IBX-9978: Fixed media field checkboxes alignment

--- a/src/bundle/Resources/public/scss/fieldType/edit/_ezmedia.scss
+++ b/src/bundle/Resources/public/scss/fieldType/edit/_ezmedia.scss
@@ -18,6 +18,16 @@
             }
         }
 
+        &__checkbox-wrapper {
+            display: flex;
+            align-items: flex-start;
+            gap: calculateRem(8px);
+
+            .ibexa-input--checkbox {
+                margin-top: calculateRem(4px);
+            }
+        }
+
         &__spinner {
             display: none;
         }
